2010-01-06  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-backend (declaration-arglist): Normalize declaration
	specifiers to contain `variables' rather than `vars'.

2010-01-05  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-sbcl.lisp (compiler-note-location): Add missing return-from.

2010-01-05  Tobias C. Rittweiler <tcr@freebits.de>

	* slime.el (compile-defun [test]): Add two cases.

2010-01-05  Cecil Westerhof  <Cecil@decebal.nl>

	* slime.texi (inferior-slime-mode): Fix thinko.

2010-01-05  Terje Norderhaug  <terje@in-progress.com>

	Provide default implementation for all-threads.

	* swank-backend.lisp (all-threads): Just return ().

2010-01-05  Helmut Eller  <heller@common-lisp.net>

	Fix M-. bug related to CMUCL's multi-file compilation units.

	* swank-cmucl.lisp (code-location-stream-position): Require the
	"root-number" as argument and subtract it from the TLF number.
	(location-in-file): Pass the root number along.
	(code-location-string-offset): Use 0 as root number.

2010-01-05  Helmut Eller  <heller@common-lisp.net>

	Slightly better error message when CMUCL fails to find defstructs.

	* swank-cmucl.lisp (struct-constructor, setf-definitions): Don't
	use COERCE which gives confusing error message.

2010-01-05  Helmut Eller  <heller@common-lisp.net>

	Add "quit" and "other window prefix" buffer selectors.

	* slime.el (slime-selector-other-window): New variable.
	(slime-selector): Bind it as need.
	(def-slime-selector-method): Use the other window if so indicated.
	([selector] 4): New key binding.
	([selector] q): New key binding. just abort.

2010-01-05  Helmut Eller  <heller@common-lisp.net>

	Stop the beeping on restart.

	* slime.el (slime-quit-lisp-internal): Don't kill already dead
	processes.

2010-01-03  Stas Boukarev  <stassats@gmail.com>

	* swank-backend.lisp (frame-call): New function.
	Returns a string representing a call to the entry point of a frame.
	* swank-ccl.lisp (frame-call): Implementation of the above.